@@ -1,42 +1,44 @@
 package ru.urfu.api;
 
-import ru.urfu.model.CurrencyResponse;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+import ru.urfu.exceptions.ParseJsonException;
+import ru.urfu.exceptions.SendRequestException;
 import ru.urfu.model.ApiDescription;
-import ru.urfu.utils.JsonParser;
+import ru.urfu.model.CurrencyResponse;
 import ru.urfu.utils.CurrencyCache;
+import ru.urfu.utils.JsonParser;
 import ru.urfu.utils.RequestSender;
 
 import java.time.Duration;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
 
 /**
  * Класс позволяющий получать стоимость валют используя ExchangeRate API
  */
+@Component
 public class ExchangeRateApi implements CurrencyApi {
 
-    private static final String NAME = "ExchangeRate API";
-    private static final ApiDescription DESCRIPTION = new ApiDescription(NAME, "https://www.exchangerate-api.com/", "1 день");
-    private static final String URL = "https://open.er-api.com/v6/latest/USD";
-
     private final RequestSender requestSender;
+
     private final JsonParser jsonParser;
+    private final String NAME = "ExRate API";
+    private final String URL = "https://open.er-api.com/v6/latest/USD";
+    private final String DESCRIPTION = new ApiDescription(NAME, "https://www.exchangerate-api.com/", "1 день").getDescription();
+    private final CurrencyCache cache = new CurrencyCache(Duration.ofDays(1));
 
-    private final Map<String, String> currencyPathMap = Collections.unmodifiableMap(new LinkedHashMap<>() {{
-        put("Рубль", "rates.RUB");
-        put("Евро", "rates.EUR");
-        put("Йен", "rates.JPY");
-        put("Юань", "rates.CNY");
-        put("Франк", "rates.CHF");
-        put("Рупий", "rates.INR");
-        put("Песо", "rates.ARS");
-    }});
+    private final Map<String, String> currencyPathMap = Map.of(
+            "Рубль", "$.rates.RUB",
+            "Евро", "$.rates.EUR",
+            "Йен", "$.rates.JPY",
+            "Юань", "$.rates.CNY",
+            "Франк", "$.rates.CHF",
+            "Рупий", "$.rates.INR",
+            "Песо", "$.rates.ARS"
+    );
 
-    private final Duration updateDuration = Duration.ofDays(1);
-    private final CurrencyCache cache = new CurrencyCache(updateDuration);
-
+    @Autowired
     public ExchangeRateApi(RequestSender requestSender, JsonParser jsonParser) {
         this.requestSender = requestSender;
         this.jsonParser = jsonParser;
@@ -49,7 +51,7 @@ public class ExchangeRateApi implements CurrencyApi {
 
     @Override
     public String getDescription() {
-        return DESCRIPTION.toString();
+        return DESCRIPTION;
     }
 
     @Override
@@ -58,13 +60,13 @@ public class ExchangeRateApi implements CurrencyApi {
     }
 
     @Override
-    public CurrencyResponse getPrice(String currency) {
+    public CurrencyResponse getPrice(String currency) throws SendRequestException, ParseJsonException {
 
         if (cache.notContains(currency)) {
             String response = requestSender.sendGetRequest(URL);
 
             currencyPathMap.forEach((curr, path) -> {
-                double price = 1 / Double.parseDouble(jsonParser.parse(response, path));
+                double price = 1 / jsonParser.parseDouble(response, path);
                 cache.save(curr, price);
             });
         }
